unpackaged/post_comexi/objects/Asset/fields/COMEXI_Control_System__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Control_System__c</fullName>
    <description>Plataforma de control y accionamiento instalada (por ejemplo Simotion GL + Sinamics). Es la clave de compatibilidad del retrofit T100: si la CPU y la CU son de la generación soportada, el trabajo es de campo y no pasa por ingeniería de proyecto.</description>
    <inlineHelpText>Plataforma de control y accionamiento instalada en la máquina.</inlineHelpText>
    <label>Sistema de control</label>
    <length>80</length>
    <type>Text</type>
</CustomField>