unpackaged/post_comexi/objects/Asset/fields/COMEXI_Install_Year__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Install_Year__c</fullName>
    <description>Año de instalación de la máquina. La antigüedad alta eleva el coste de retrofit (x3/x4) y puede invalidar el retrofit estándar.</description>
    <label>Año de instalación</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>