unpackaged/post_comexi/objects/Asset/fields/COMEXI_Installed_Config__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Installed_Config__c</fullName>
    <description>Configuración instalada (PC, versión de Windows, CPU GL, CU, pantalla). Insumo de la cualificación de viabilidad y del razonamiento del agente.</description>
    <label>Configuración instalada</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>