unpackaged/post_comexi/objects/Asset/fields/COMEXI_Intervention_Count__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Count__c</fullName>
    <description>Número de intervenciones de servicio acumuladas sobre la máquina desde su instalación. Es la prueba de que la base instalada es un histórico explotable y no un dato muerto en un Excel de hace veinte años (D8).</description>
    <inlineHelpText>Intervenciones de servicio acumuladas desde la instalación.</inlineHelpText>
    <label>Intervenciones acumuladas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>