unpackaged/post_comexi/objects/Asset/fields/COMEXI_Last_Intervention_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Last_Intervention_Date__c</fullName>
    <description>Fecha de la última intervención de un técnico Comexi sobre esta máquina. El campo equivalente en Account da la relación con el cliente; este da la de la máquina concreta, que es la que el vendedor necesita antes de planificar el viaje.</description>
    <inlineHelpText>Última vez que un técnico Comexi intervino sobre esta máquina.</inlineHelpText>
    <label>Última intervención</label>
    <type>Date</type>
</CustomField>