unpackaged/post_comexi/objects/Asset/fields/COMEXI_Last_Retrofit_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Last_Retrofit_Date__c</fullName>
    <description>Fecha del último retrofit aplicado a la máquina. Junto con los SKUs aplicados cierra el ciclo de la escena 12: cada venta mejora la calidad del dato sobre el que se calculará la siguiente viabilidad.</description>
    <inlineHelpText>Fecha del último retrofit aplicado a esta máquina.</inlineHelpText>
    <label>Último retrofit</label>
    <type>Date</type>
</CustomField>