unpackaged/post_comexi/objects/Asset/fields/COMEXI_Line__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Line__c</fullName>
    <description>Familia/línea de la máquina (T, L, C, P) según la codificación de producto de Comexi.</description>
    <label>Línea</label>
    <length>10</length>
    <type>Text</type>
</CustomField>