unpackaged/post_comexi/objects/Asset/fields/COMEXI_Machine_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Age_Years__c</fullName>
    <description>Antigüedad en años de la máquina, calculada desde el año de instalación. En el discovery la antigüedad multiplica el coste de la intervención (x3/x4 en máquinas muy antiguas) y condiciona la viabilidad del retrofit. Es formula para que no se quede desfasada entre pases de la demo.</description>
    <formula>IF(ISBLANK(COMEXI_Install_Year__c), NULL, YEAR(TODAY()) - COMEXI_Install_Year__c)</formula>
    <label>Antigüedad de la máquina (años)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>