unpackaged/post_comexi/objects/Asset/fields/COMEXI_Machine_Model__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Model__c</fullName>
    <description>Modelo de la máquina instalada (p. ej. Proslit S2 DS). Alimenta la cualificación de viabilidad del retrofit.</description>
    <label>Modelo de máquina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>