unpackaged/post_comexi/objects/Asset/fields/COMEXI_Max_Speed_Mpm__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Max_Speed_Mpm__c</fullName>
    <description>Velocidad máxima de la máquina en metros por minuto según ficha técnica. Es el argumento de valor de los retrofits de accionamiento y control: recuperar velocidad nominal perdida sin sustituir la máquina.</description>
    <inlineHelpText>Velocidad máxima de ficha técnica, en metros por minuto.</inlineHelpText>
    <label>Velocidad máxima (m/min)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>