unpackaged/post_comexi/objects/Asset/fields/COMEXI_Obsolescence_Risk__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Obsolescence_Risk__c</fullName>
    <description>Nivel de riesgo por obsolescencia de la máquina. Es el criterio de priorización del preestudio masivo (escena 14): permite ordenar la base instalada por urgencia en vez de atenderla por orden de llegada de correos.</description>
    <inlineHelpText>Urgencia con la que esta máquina debería entrar en campaña de retrofit.</inlineHelpText>
    <label>Riesgo de obsolescencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critico</fullName>
                <label>Crítico</label>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>