unpackaged/post_comexi/objects/Asset/fields/COMEXI_Obsolete_Component__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Obsolete_Component__c</fullName>
    <description>Componente de la máquina que ha entrado en obsolescencia y dispara el retrofit. Es el dato que el agente necesita para recomendar un SKU concreto en vez de un retrofit genérico, y el que permite el preestudio masivo de la escena 14 (buscar todas las máquinas con el mismo componente afectado).</description>
    <inlineHelpText>Componente obsoleto que justifica el retrofit.</inlineHelpText>
    <label>Componente obsoleto</label>
    <length>120</length>
    <type>Text</type>
</CustomField>