unpackaged/post_comexi/objects/Asset/fields/COMEXI_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Open_Cases__c</fullName>
    <description>Casos de servicio abiertos sobre la máquina. No puede ser un rollup summary porque Case no es detalle de Asset: lo sella el script de seed de la demo. El componente de la ficha lee los casos reales, así que este campo es el que hace el dato visible también en informes y listas.</description>
    <inlineHelpText>Casos de servicio abiertos sobre esta máquina.</inlineHelpText>
    <label>Casos abiertos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>