unpackaged/post_comexi/objects/Asset/fields/COMEXI_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Operating_Hours__c</fullName>
    <description>Horas de funcionamiento acumuladas de la máquina. Da la medida de desgaste real que la antigüedad por sí sola no captura: una máquina de 2015 a tres turnos ha trabajado más que una de 2005 a uno.</description>
    <inlineHelpText>Horas de funcionamiento acumuladas según contador de máquina.</inlineHelpText>
    <label>Horas de funcionamiento</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>