unpackaged/post_comexi/objects/Asset/fields/COMEXI_OS_Installed__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_OS_Installed__c</fullName>
    <description>Sistema operativo del PC industrial de línea. Es el disparador del retrofit T100 del caso 174535: el fin de soporte deja la máquina sin parches y acaba desconectada de la red corporativa aunque siga produciendo.</description>
    <inlineHelpText>Sistema operativo que corre hoy el PC de la máquina.</inlineHelpText>
    <label>Sistema operativo instalado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows XP</fullName>
            </value>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows 11</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>