unpackaged/post_comexi/objects/Asset/fields/COMEXI_OS_Support_End__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_OS_Support_End__c</fullName>
    <description>Fecha de fin de soporte del sistema operativo instalado. Convierte la obsolescencia en algo accionable: es la fecha sobre la que se construye la campaña proactiva de retrofit en vez de esperar a que el cliente llame.</description>
    <inlineHelpText>Fecha en la que el fabricante dejó o dejará de dar soporte al sistema operativo.</inlineHelpText>
    <label>Fin de soporte del SO</label>
    <type>Date</type>
</CustomField>