unpackaged/post_comexi/objects/Asset/fields/COMEXI_Recommended_Retrofit_SKU__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Recommended_Retrofit_SKU__c</fullName>
    <description>SKU del retrofit recomendado para esta máquina, validado contra el catálogo real. Es el antídoto al "Codi P271 no trobat" del discovery: el código que se propone existe como Product2, no lo ha inventado una celda ni un modelo de lenguaje.</description>
    <inlineHelpText>SKU de retrofit recomendado. Tiene que existir en el catálogo.</inlineHelpText>
    <label>SKU de retrofit recomendado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>