unpackaged/post_comexi/objects/Asset/fields/COMEXI_Retrofit_Eligible__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si la máquina admite el retrofit estándar de su línea. Cuando está desmarcada la salida no es "no hay negocio" sino máquina nueva, que es exactamente lo que pasó con el precedente perdido del Advisor.</description>
    <inlineHelpText>Marca si la máquina admite el retrofit estándar de su línea.</inlineHelpText>
    <label>Elegible para retrofit</label>
    <type>Checkbox</type>
</CustomField>