unpackaged/post_comexi/objects/Asset/fields/COMEXI_Retrofit_Potential_Value__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_Potential_Value__c</fullName>
    <description>Valor estimado del retrofit pendiente en esta máquina. Es lo que convierte el preestudio masivo de la escena 14 en un pipeline cuantificado: la base instalada deja de ser un inventario y pasa a ser una previsión de negocio de servicio.</description>
    <inlineHelpText>Valor estimado del retrofit pendiente en esta máquina.</inlineHelpText>
    <label>Valor potencial de retrofit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>