unpackaged/post_comexi/objects/Asset/fields/COMEXI_Retrofits_Applied__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofits_Applied__c</fullName>
    <description>SKUs de los retrofits ya aplicados a la máquina, separados por coma. Evita recomendar dos veces el mismo retrofit y es el histórico que hoy solo existe en la memoria del técnico que hizo la intervención.</description>
    <inlineHelpText>SKUs de retrofits ya aplicados, separados por coma.</inlineHelpText>
    <label>Retrofits aplicados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>