unpackaged/post_comexi/objects/Asset/fields/COMEXI_SAP_Equipment_Code__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_SAP_Equipment_Code__c</fullName>
    <description>Código de equipo de la máquina en SAP. Es la matrícula con la que hoy se la busca fuera de Salesforce, así que sin ella el técnico sigue teniendo que abrir dos sistemas para hablar de la misma máquina.</description>
    <inlineHelpText>Código con el que esta máquina existe en SAP.</inlineHelpText>
    <label>Código de equipo SAP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>