unpackaged/post_comexi/objects/Asset/fields/COMEXI_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Service_Level__c</fullName>
    <description>Nivel de contrato de servicio de la máquina. El discovery dejó los packs gold/silver como gap: hoy existen comercialmente pero no están catalogados, así que este campo es el punto de anclaje para cuando se cataloguen.</description>
    <inlineHelpText>Nivel de contrato de servicio que cubre esta máquina.</inlineHelpText>
    <label>Nivel de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Sin contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>