unpackaged/post_comexi/objects/Asset/fields/COMEXI_Service_Revenue_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Service_Revenue_Lifetime__c</fullName>
    <description>Ingresos de servicio acumulados sobre esta máquina desde su instalación: repuestos, intervenciones y retrofits. Es el argumento de por qué el negocio de servicio merece la misma trazabilidad que la venta de máquina nueva.</description>
    <inlineHelpText>Ingresos de servicio acumulados sobre esta máquina.</inlineHelpText>
    <label>Ingresos de servicio acumulados</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>