unpackaged/post_comexi/objects/Asset/fields/COMEXI_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Site_Location__c</fullName>
    <description>Planta y país donde está instalada la máquina. No siempre coincide con la dirección de facturación de la cuenta, y es lo que determina el riesgo país, los gastos de desplazamiento y la ventana de intervención de la oferta.</description>
    <inlineHelpText>Planta y país donde está físicamente la máquina.</inlineHelpText>
    <label>Planta / emplazamiento</label>
    <length>120</length>
    <type>Text</type>
</CustomField>