unpackaged/post_comexi/objects/Asset/fields/COMEXI_Stations__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Stations__c</fullName>
    <description>Número de estaciones de la máquina: cuerpos de impresión en las flexográficas y husillos de corte en las cortadoras. Multiplica el alcance de cualquier retrofit que se aplique estación por estación.</description>
    <inlineHelpText>Cuerpos de impresión o husillos de corte, según el tipo de máquina.</inlineHelpText>
    <label>Estaciones</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>