unpackaged/post_comexi/objects/Asset/fields/COMEXI_Web_Width_mm__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Web_Width_mm__c</fullName>
    <description>Ancho de banda útil de la máquina en milímetros. Es el primer dato que identifica una máquina de converting y el que decide si un retrofit de mecánica cabe en ella.</description>
    <inlineHelpText>Ancho de banda útil en milímetros.</inlineHelpText>
    <label>Ancho de banda (mm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>